--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 				<div>
 					
-					<img src=" imagen/imag.jpg" width="125" height="170">
+					<img src=" imagen/imag.JPG" width="125" height="170">
 				</div>
 				 <script>
-       swal({   title: "Bienvenido Al CV de Eric Gonzalez", 
+       swal({   title: "Bienvenido Al CV de Erik Gonzalez", 
              text: "se cerra en 5segundos",
              timer: 5000,   
              confirmButtonColor:	"#a90",
